<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hanime_app_name" translatable="false" tools:ignore="Typos">Han1meViewer</string>
    <string name="home_page">首頁</string>
    <string name="latest_hanime">最新裏番</string>
    <string name="latest_upload">最新上傳</string>
    <string name="they_watched">他們在看</string>
    <string name="search">搜尋</string>
    <string name="advanced_search">高級搜尋</string>
    <string name="back">返回</string>
    <string name="type">類型</string>
    <string name="tag">標籖</string>
    <string name="sort_option">排序方式</string>
    <string name="brand">品牌</string>
    <string name="release_date">發佈日期</string>
    <string name="duration">影片長度</string>
    <string name="alert">提示</string>
    <string name="alert_cancel_all_tags">確認將會取消你所選的所有Tag</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="pair_widely">模糊搜尋</string>
    <string name="pair_widely_alert">較多結果，較不精準。配對所有包含任何一個選擇的標籤的影片，而非全部標籤</string>
    <string name="reset">重設</string>
    <string name="save">保存</string>
    <string name="video_attr">影片屬性</string>
    <string name="relationship">人物關係</string>
    <string name="characteristics">角色設定</string>
    <string name="appearance_and_figure">外貌身材</string>
    <string name="story_location">情景場所</string>
    <string name="story_plot">故事劇情</string>
    <string name="sex_position">性交體位</string>
    <string name="copy_to_clipboard">已複製到剪貼簿</string>
    <string name="introduction">簡介</string>
    <string name="comment">評論</string>
    <string name="collapse">收起</string>
    <string name="expand">展開</string>
    <string name="series_video">系列影片</string>
    <string name="related_video">相關影片</string>
    <string name="now_playing">現正播放</string>
    <string name="view_more_replies">查看 %1$d 則回覆</string>
    <string name="comment_not_found">未發現評論</string>
    <string name="hanime_list">新番列表</string>
    <string name="latest_hanime_list_monthly">%s 裏番新番列表</string>
    <string name="preview_page_updating">站方正在更新新番預告頁面，請嘗試查看其他月份</string>
    <string name="preview_page_updating_getchu_hint">站方正在更新新番預告頁面，可先查看 Getchu 新番預告。Getchu 可能需要 VPN 才能正常訪問。</string>
    <string name="latest_hanime_comment">%s 新番評論區</string>
    <string name="view_getchu_preview">查看 Getchu 預告</string>
    <string name="getchu_preview">Getchu 新番預告</string>
    <string name="getchu_preview_title">Getchu %s 新番預告</string>
    <string name="getchu_preview_detail">Getchu 新番詳情</string>
    <string name="getchu_sample_images">樣品圖</string>
    <string name="getchu_series">系列商品</string>
    <string name="getchu_product_intro">商品介紹</string>
    <string name="getchu_story">故事</string>
    <string name="getchu_staff">製作人員</string>
    <string name="my_list">我的清單</string>
    <string name="watch_later">稍後觀看</string>
    <string name="fav_video">喜歡的影片</string>
    <string name="settings">設定</string>
    <string name="video">影片</string>
    <string name="download">下載</string>
    <string name="watch_history">觀看歷史</string>
    <string name="login">登入</string>
    <string name="delete">刪除</string>
    <string name="here_is_empty">這裡空空的…</string>
    <string name="play_list">播放清單</string>
    <string name="add_to_fav">加入喜歡</string>
    <string name="share">分享</string>
    <string name="video_language">影片語言</string>
    <string name="other">其他</string>
    <string name="about">關於</string>
    <string name="check_update">檢查更新</string>
    <string name="new_version_found">已發現新版本</string>
    <string name="checking_update">檢查更新中…</string>
    <string name="update_content">更新內容</string>
    <string name="check_update_failed">檢查更新失敗，點擊重試</string>
    <string name="check_update_success">當前有新版本：%s，點擊查看</string>
    <string name="current_version">當前版本：%s</string>
    <string name="already_latest_update">已經是最新版本！</string>
    <string name="search_placeholder">今天想看點什麼呢</string>
    <string name="downloading">正在下載</string>
    <string name="downloading_s">正在下載：%1$s</string>
    <string name="downloading_update_percent">正在下載更新 %d%%</string>
    <string name="update_download_failed">更新下載失敗</string>
    <string name="update_download_failed_unknown">更新下載失敗，請稍後重試或前往 GitHub Releases 手動下載。</string>
    <string name="downloaded">已下載</string>
    <string name="start_download">開始下載</string>
    <string name="cancel_download">取消下載</string>
    <string name="local_playback">本地觀看</string>
    <string name="download_path">下載路徑</string>
    <string name="help">幫助</string>
    <string name="reply">回覆</string>
    <string name="reply_child_comment">回覆子評論</string>
    <string name="login_first">請先登入</string>
    <string name="clear_cache">清除快取</string>
    <string name="cache_usage_summary"><![CDATA[目前佔用了 <b>%1$s</b> 的儲存空間]]></string>
    <string name="allow">允許</string>
    <string name="deny">拒絕</string>
    <string name="no_video_links_found">未發現影片連結</string>
    <string name="child_comment">子評論</string>
    <string name="search_options_tips">Tips:長按某單元可以清除當前你所選單元的所有Tag</string>
    <string name="continues">繼續</string>
    <string name="jump_to_webpage">轉到網頁</string>
    <string name="quick_checkin">快速打卡</string>
    <string name="sure_to_delete_s">確定要刪除 %s 嗎？</string>
    <string name="sure_to_delete">確定要刪除嗎？</string>
    <string name="prepare_to_delete_s">你現在正要準備刪除\n%s</string>
    <string name="playlist_title">標題</string>
    <string name="playlist_description">介紹</string>
    <string name="open_playlist_drawer">打開播放清單列表</string>
    <string name="add_to_playlist">加入清單</string>
    <string name="player_settings">播放器設定</string>
    <string name="tablet_mode">平板模式</string>
    <string name="tablet_mode_summary">開啟後影片頁面將以平板佈局顯示，提供更大觀看區域</string>
    <string name="search_grid_columns_title">影片網格列數</string>
    <string name="search_grid_columns_summary">僅在平板模式下生效，可依螢幕寬度調整搜尋、稍後觀看、喜歡影片與訂閱頁的列數</string>
    <string name="search_grid_columns_dialog_hint">依不同螢幕寬度設定影片網格的列數</string>
    <string name="search_grid_columns_current_width_hint">目前裝置寬度參考：直向約 %1$ddp，橫向約 %2$ddp</string>
    <string name="network">網路</string>
    <string name="h_keyframe_settings">關鍵H幀設定</string>
    <string name="h_keyframes_enable">關鍵H幀，啟動！</string>
    <string name="h_keyframes_disable_tip">開啟後，播放器頂部會顯示🥵</string>
    <string name="manage">管理</string>
    <string name="h_keyframe_manage">關鍵H幀管理</string>
    <string name="when_countdown_remind">何時開始倒數計時提醒</string>
    <string name="show_prompt_when_countdown">倒數計時顯示提示</string>
    <string name="shared_h_keyframes_enable">採用共享關鍵H幀集</string>
    <string name="shared_h_keyframe_manage">共享關鍵H幀管理</string>
    <string name="shared_h_keyframe_manage_tip">歡迎到 GitHub 上面提交你的關鍵H幀，如果不會提交，討論區有教學文供參考</string>
    <string name="shared_h_keyframes_enable_tip">採用好心人上傳到 Github 的關鍵H幀集</string>
    <string name="shared">共享</string>
    <string name="shared_h_keyframes_use_first">優先採用共享關鍵H幀集</string>
    <string name="shared_h_keyframes_use_first_tip">當共享集和本地集都存在某一影片的關鍵H幀時，優先採用共享集</string>
    <string name="forum">討論區</string>
    <string name="forum_summary">歡迎來吐槽，如果有重要資訊也會發佈到這裡</string>
    <string name="submit_bug">提交 BUG</string>
    <string name="submit_bug_summary">出 BUG 了就來提交個 issue 吧</string>
    <string name="network_settings">網路設定</string>
    <string name="update">更新</string>
    <string name="use_ci_update_channel">使用 CI 更新通道。</string>
    <string name="use_ci_update_channel_summary">CI 更新頻道能更快地取得最新變更\n但不保證穩定性</string>
    <string name="update_popup_interval_days">檢查更新跳出視窗間隔天數</string>
    <string name="custom">自訂</string>
    <string name="show_bottom_progress">顯示底部進度條</string>
    <string name="default_playback_speed">預設播放速度</string>
    <string name="long_press_speed_multiplier">長按快進速度是當前速度的</string>
    <string name="slide_sensitivity">滑動調整進度的靈敏度</string>
    <string name="apply_deep_links">預設開啟</string>
    <string name="apply_deep_links_summary">允許在這個應用程式中開啟網頁連結</string>
    <string name="switch_player_kernel">切換播放器內核</string>
    <string name="analytics_summary">長按了解開啟對開發者的重要性</string>
    <string name="analytics_title">使用情況統計</string>
    <string name="privacy">隱私</string>
    <string name="download_settings">下載設定</string>
    <string name="download_count_limit">同時下載數量限制</string>
    <string name="download_speed_limit">下載速度限制</string>
    <string name="oss_license">本軟體所使用的開源項目</string>
    <string name="open_source_license">開源許可</string>
    <string name="use_lock_screen">使用應用程式鎖定螢幕</string>
    <string name="use_lock_screen_sum">開啟後，進入應用程式時需驗證螢幕鎖定，防止他人開啟。</string>
    <string name="app_lang">語言</string>
    <string name="app_lang_sum">選擇應用程式語言</string>
    <string name="disable_comments_title">關閉評論區</string>
    <string name="disable_comments_sum">啟用後，影片詳情頁將不再顯示評論區</string>
    <string name="default_video_quilty">預設解析度</string>
    <string name="allow_pip_disc">允許返回桌面時進入畫中畫模式  （需要開啟畫中畫權限）</string>
    <string name="allow_pip_title">允許進入畫中畫模式</string>
    <string name="fake_app_icon">偽裝應用</string>
    <string name="select_fake_icon">選擇顯示在桌面的圖標</string>
    <string name="pref_export_downloads_title">導出下載項</string>
    <string name="pref_export_downloads_summary">導出私有下載目錄中的所有下載項到自訂目錄</string>
    <string name="download_category">下載設定</string>
    <string name="download_category_summary">點擊可設定路徑，長按可恢復預設路徑</string>
    <string name="theme">主題與外觀</string>
    <string name="dynamic_color_title">動態配色</string>
    <string name="dynamic_color_summary">開啟後跟隨系統主題色，僅支援Android 12以上</string>
    <string name="dark_theme">深色主題</string>
    <string name="resume_playback_title">續播功能</string>
    <string name="resume_playback_summary">如有播放記錄，將自動跳轉到上次退出位置</string>
    <string name="mpv_advanced_settings">MPV 播放核心設定</string>
    <string name="mpv_advanced_settings_summary">設定畫質、效能與網路快取等進階選項</string>
    <string name="player_settings_quality_performance">畫質與效能</string>
    <string name="player_settings_network_cache">網路與快取</string>
    <string name="mpv_profile">渲染品質級別 (profile)</string>
    <string name="mpv_interpolation">啟用插幀增強 (interpolation)</string>
    <string name="mpv_interpolation_summary">提升低幀率影片流暢度，但會增加功耗</string>
    <string name="mpv_deband">去色帶增強 (deband)</string>
    <string name="mpv_deband_summary">減少暗場或漸變區域的色帶現象</string>
    <string name="mpv_framedrop">允許跳幀保持流暢 (framedrop)</string>
    <string name="mpv_framedrop_summary">GPU 繁忙時可略微丟幀以避免卡頓</string>
    <string name="mpv_hwdec">解碼方式 (hwdec)</string>
    <string name="mpv_hwdec_summary">利用硬體加速提升播放效能，部分裝置無法使用硬解播放黑屏可嘗試關閉</string>
    <string name="mpv_cache_secs">預快取時長</string>
    <string name="mpv_cache_secs_summary">調整快取大小以適應網路波動</string>
    <string name="mpv_tls_verify">忽略 HTTPS 憑證驗證</string>
    <string name="mpv_tls_verify_summary">部分站點憑證異常時可臨時關閉驗證</string>
    <string name="mpv_network_timeout">網路逾時時間</string>
    <string name="mpv_network_timeout_summary">控制請求等待時間</string>
    <string name="enable_gpu_next">啟用GPU NEXT渲染器</string>
    <string name="enable_gpu_next_summary">新版渲染器，可能不穩定 (不支援Anime4K)</string>
    <string name="custom_parameters">自訂參數</string>
    <string name="custom_parameters_summary">設定播放器啟動參數/設定，格式為key,parameters，使用英文分號分隔</string>
    <string name="advanced">進階</string>
    <string name="advanced_summary">可能會影響播放穩定性</string>
    <string name="custom_parameters_title">注意：因播放器平台不同，部分參數可能不會生效</string>
    <string name="search_artist_ignore_video_type">搜尋藝術家忽略影片類型</string>
    <string name="search_artist_ignore_video_type_summary">開啟後，點選詳細頁頭像搜尋藝術家時，不再附帶影片類型。</string>
    <string name="show_played_indicator">顯示播放狀態標記</string>
    <string name="show_played_indicator_summary">開啟後將在搜尋結果頁影片封面右上角顯示已播放標記</string>
    <string name="disable_mobile_data_warning">關閉流量提醒</string>
    <string name="disable_mobile_data_warning_summary">開啟後使用行動流量播放時將不再提醒</string>
    <string name="collapse_downloaded_groups">預設折疊已下載群組</string>
    <string name="collapse_downloaded_groups_summary">開啟後，進入已下載頁面時，將預設折疊群組</string>
    <string name="mpv_adv_setting_hint" translatable="false">key1,value1;key2,value2;......</string>
</resources>