<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/video">

        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:icon="@drawable/baseline_simp_to_trad_24"
            app:key="video_language"
            app:title="@string/video_language"
            app:useSimpleSummaryProvider="true" />
        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:icon="@drawable/ic_video_quilty"
            app:key="default_video_quality"
            app:title="@string/default_video_quilty"
            app:useSimpleSummaryProvider="true" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_pip_mode"
            app:key="allow_pip_mode"
            app:summary="@string/allow_pip_disc"
            app:title="@string/allow_pip_title" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_skip_24"
            app:key="allow_resume_playback"
            app:summary="@string/resume_playback_summary"
            app:title="@string/resume_playback_title" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_history_24"
            app:key="show_played_indicator"
            app:summary="@string/show_played_indicator_summary"
            app:title="@string/show_played_indicator" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/baseline_prohibit_24"
            app:key="search_artist_ignore_video_type"
            app:summary="@string/search_artist_ignore_video_type_summary"
            app:title="@string/search_artist_ignore_video_type" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/baseline_mobile_data_24"
            app:key="disable_mobile_data_warning"
            app:summary="@string/disable_mobile_data_warning_summary"
            app:title="@string/disable_mobile_data_warning" />

        <Preference
            app:icon="@drawable/ic_baseline_play_circle_outline_24"
            app:key="player_settings"
            app:title="@string/player_settings" />

        <!-- #issue-104: 关键H帧移出设置 -->

        <Preference
            app:icon="@drawable/baseline_h_24"
            app:key="h_keyframe_settings"
            app:title="@string/h_keyframe_settings" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:icon="@drawable/ic_comments"
            app:key="disable_comments"
            app:summary="@string/disable_comments_sum"
            app:title="@string/disable_comments_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/download">

        <Preference
            app:icon="@drawable/ic_baseline_download_24"
            app:key="download_settings"
            app:title="@string/download_settings" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:icon="@drawable/ic_baseline_fold_24"
            app:key="collapse_downloaded_group"
            app:summary="@string/collapse_downloaded_groups_summary"
            app:title="@string/collapse_downloaded_groups" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/network">

        <Preference
            app:icon="@drawable/ic_baseline_language_24"
            app:key="network_settings"
            app:title="@string/network_settings" />

        <Preference
            app:icon="@drawable/baseline_add_link_24"
            app:key="apply_deep_links"
            app:summary="@string/apply_deep_links_summary"
            app:title="@string/apply_deep_links" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme">

        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:icon="@drawable/ic_baseline_moon_24"
            app:key="use_dark_mode"
            app:title="@string/dark_theme"
            app:useSimpleSummaryProvider="true" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:icon="@drawable/ic_baseline_theme_24"
            app:key="use_dynamic_color"
            app:summary="@string/dynamic_color_summary"
            app:title="@string/dynamic_color_title" />

        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:key="app_language"
            app:title="@string/app_lang"
            app:summary="@string/app_lang_sum"
            app:entries="@array/lang_display_names"
            app:entryValues="@array/lang_values"
            app:defaultValue="system"
            app:icon="@drawable/ic_setting_lang" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update">

        <Preference
            app:icon="@drawable/ic_baseline_update_24"
            app:key="update"
            app:title="@string/check_update" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_setting_ci"
            app:key="use_ci_update_channel"
            app:summary="@string/use_ci_update_channel_summary"
            app:title="@string/use_ci_update_channel" />

        <com.yenaly.han1meviewer.ui.view.pref.MaterialSliderPreference
            android:max="30"
            app:icon="@drawable/ic_clock"
            app:key="update_popup_interval_days"
            app:min="0"
            app:title="@string/update_popup_interval_days"
            app:updatesContinuously="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy">

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/baseline_data_usage_24"
            app:key="use_analytics"
            app:summary="@string/analytics_summary"
            app:title="@string/analytics_title" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:icon="@drawable/ic_setting_applock"
            app:key="use_lock_screen"
            app:summary="@string/use_lock_screen_sum"
            app:title="@string/use_lock_screen" />
        <Preference
            android:key="pref_fake_launcher_icon"
            android:title="@string/fake_app_icon"
            android:icon="@drawable/ic_baseline_mask"
            android:summary="@string/select_fake_icon" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
            app:icon="@drawable/ic_baseline_clear_all_24"
            app:key="clear_cache"
            app:title="@string/clear_cache" />

        <Preference
            app:icon="@drawable/baseline_bug_report_24"
            app:key="submit_bug"
            app:summary="@string/submit_bug_summary"
            app:title="@string/submit_bug" />

        <Preference
            app:icon="@drawable/baseline_forum_24"
            app:key="forum"
            app:summary="@string/forum_summary"
            app:title="@string/forum" />

        <Preference
            android:icon="@drawable/ic_oss"
            android:key="oss_license"
            android:title="@string/open_source_license"
            android:summary="@string/oss_license" />

        <Preference
            app:icon="@drawable/ic_baseline_info_24"
            app:key="about"
            app:summary="@string/hanime_app_name"
            app:title="@string/about" />

    </PreferenceCategory>

</PreferenceScreen>