<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/player_settings_quality_performance">

        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:key="mpv_profile"
            app:title="@string/mpv_profile"
            app:icon="@drawable/baseline_render_24"
            app:useSimpleSummaryProvider="true" />
        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:key="mpv_gpu_next_render"
            app:title="@string/enable_gpu_next"
            app:summary="@string/enable_gpu_next_summary"
            app:icon="@drawable/baseline_chip_24"
            app:defaultValue="false" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:key="mpv_interpolation"
            app:title="@string/mpv_interpolation"
            app:summary="@string/mpv_interpolation_summary"
            app:icon="@drawable/baseline_frame_inter_24"
            app:defaultValue="false" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:key="mpv_deband"
            app:title="@string/mpv_deband"
            app:summary="@string/mpv_deband_summary"
            app:icon="@drawable/baseline_deband_24"
            app:defaultValue="true" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:key="mpv_framedrop"
            app:title="@string/mpv_framedrop"
            app:summary="@string/mpv_framedrop_summary"
            app:icon="@drawable/baseline_frame_jump_24"
            app:defaultValue="true" />

        <com.yenaly.han1meviewer.ui.view.pref.MaterialDialogPreference
            app:key="mpv_hwdecx"
            app:title="@string/mpv_hwdec"
            app:summary="@string/mpv_hwdec_summary"
            app:icon="@drawable/baseline_decoder_24" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/player_settings_network_cache">

        <com.yenaly.han1meviewer.ui.view.pref.MaterialSliderPreference
            android:max="120"
            app:min="10"
            android:stepSize="5"
            app:defaultValue="60"
            app:key="mpv_cache_secs"
            app:title="@string/mpv_cache_secs"
            app:summary="@string/mpv_cache_secs_summary"
            app:icon="@drawable/baseline_cache_24"
            app:updatesContinuously="true" />

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:key="mpv_tls_verify"
            app:title="@string/mpv_tls_verify"
            app:summary="@string/mpv_tls_verify_summary"
            app:icon="@drawable/baseline_cert_24"
            app:defaultValue="true" />
        <com.yenaly.han1meviewer.ui.view.pref.MaterialSliderPreference
            android:max="30"
            app:min="5"
            android:stepSize="5"
            app:defaultValue="10"
            app:key="mpv_network_timeout"
            app:title="@string/mpv_network_timeout"
            app:summary="@string/mpv_network_timeout_summary"
            app:icon="@drawable/baseline_overtime_24"
            app:updatesContinuously="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/advanced"
        app:summary="@string/advanced_summary">
        <com.yenaly.han1meviewer.ui.view.pref.MaterialEditTextPreference
            app:title="@string/custom_parameters"
            app:summary="@string/custom_parameters_summary"
            android:hint = "@string/mpv_adv_setting_hint"
            app:icon="@drawable/baseline_custom_24"
            app:key="mpv_custom_parameters"
            app:dialogTitle="@string/custom_parameters_title" />
    </PreferenceCategory>
    <Preference
        app:title=""
        app:summary=""/>

</PreferenceScreen>
