<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
        app:defaultValue="true"
        app:key="h_keyframes_enable"
        app:summary="@string/h_keyframes_disable_tip"
        app:title="@string/h_keyframes_enable"
        app:icon="@drawable/baseline_h_24"/>

    <PreferenceCategory
        app:key="h_keyframe_manage_category"
        app:title="@string/manage">

        <Preference
            app:key="h_keyframe_manage"
            app:title="@string/h_keyframe_manage"
            app:icon="@drawable/baseline_manage_24"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:key="shared_h_keyframes_category"
        app:title="@string/shared">

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="shared_h_keyframes_enable"
            app:summary="@string/shared_h_keyframes_enable_tip"
            app:title="@string/shared_h_keyframes_enable"
            app:icon="@drawable/baseline_share_24"/>

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="shared_h_keyframes_use_first"
            app:summary="@string/shared_h_keyframes_use_first_tip"
            app:title="@string/shared_h_keyframes_use_first"
            app:icon="@drawable/baseline_share_first_24"/>

        <Preference
            app:key="shared_h_keyframe_manage"
            app:summary="@string/shared_h_keyframe_manage_tip"
            app:title="@string/shared_h_keyframe_manage"
            app:icon="@drawable/baseline_online_manage_24"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="h_keyframe_custom_category"
        app:title="@string/custom">

        <com.yenaly.yenaly_libs.base.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="show_comment_when_countdown"
            app:title="@string/show_prompt_when_countdown"
            app:icon="@drawable/baseline_count_down_24"/>

        <com.yenaly.han1meviewer.ui.view.pref.MaterialSliderPreference
            android:max="30"
            app:defaultValue="10"
            app:key="when_countdown_remind"
            app:min="5"
            app:title="@string/when_countdown_remind"
            app:updatesContinuously="true"
            app:icon="@drawable/ic_baseline_alert_24"/>

    </PreferenceCategory>

</PreferenceScreen>